prevented input/res from overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -18,13 +18,13 @@
   background-color: rgba(0, 0, 0, .25);
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  text-align: right;
 }
 
 .input {
   border: 1px solid yellow;
   font-size: 16px;
-  overflow-x: auto;
+  overflow: auto;
 }
 
 .res {
